--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/press">Press</a>
+            <a href="{{ site.baseurl }}/user">User Area</a>
           </nav>
         </header>
       </div>
