--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-          <a href="{{ site.baseurl }}/registration">Register</a>
+          <a href="{{ site.baseurl }}/registration">Sign Up</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/press">Press</a>
