update heading to bold

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
           </div>
 
           <nav>
-          <a href="{{ site.baseurl }}/registration">Sign Up</a>
+          <a href="{{ site.baseurl }}/registration"><b>Sign Up</b></a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/press">Press</a>
-            <a href="{{ site.baseurl }}/user">User Area</a>
+            <a href="{{ site.baseurl }}/user">Users Area</a>
           </nav>
         </header>
       </div>
