--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
+      Test
     </div>
 
     <div class="wrapper-footer">
