.smallbutton class added

--- a/style.scss
+++ b/style.scss
@@ -210,6 +210,10 @@ img {
   }
 }
 
+.small-button {
+max-width: 50%;
+}
+
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
