--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/press">Press</a>
-            <a href="{{ site.baseurl }}/user">Users Area</a>
+            <a href="{{ site.baseurl }}/user">Service</a>
           </nav>
         </header>
       </div>
